@@ -649,6 +649,12 @@ static NSString *PWD_ENVVALUE = @"~";
     [SCREEN updateScreen];
 }
 
+// do any idle tasks here
+- (void) doIdleTasks
+{
+    //[SCREEN removeOverLine];
+}
+
 - (void)insertText:(NSString *)string
 {
     NSData *data;
